--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -3,3 +3,4 @@ name = "wink"
 version = "0.0.0"
 requires-python = ">=3.13"
 description = "scripts for blink"
+scripts = { wink = "wink.cli:main" }
